<resources>
    <string name="app_name">supercalculator</string>
    <string name="allClear">AC</string>
    <string name="erase">⌫</string>
    <string name="percent">%</string>
    <string name="split">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="deduct">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sum">+</string>
    <string name="point">,</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
</resources>